# AIM

./: CMakeLists.txt  README.md  pkglist.txt  test.txt
src/: main.c
src/file_manage/: file_loading.c  file_saving.c  pkg.h
src/screen_manage/: pkg.h  screen_update.c
src/special_keybind/: move_keys.c  new_line.c  pkg.h  remove_keys.c  save_keys.c  special_key.c
